--- a/src/Components/Board/Board.css
+++ b/src/Components/Board/Board.css
@@ -16,7 +16,7 @@
     font-weight: bold;
 }
 .tiles-container {
-    padding: 20px;
+    padding: 5px;
     border-radius: 10px;
     border: 4px solid #352929;
     width: 85%;
@@ -27,8 +27,9 @@
     
 }
 .tiles-items-container {
-    display: grid;
-    grid-template-columns: 33% 33% 33%;
+    display: flex;
+    /* grid-template-columns: 50% 50%; */
+    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
 }
@@ -36,14 +37,44 @@
     border: 2px solid #352929;
     border-radius:10px ;
     list-style-type: none;
-    height: 150px;
+    height: 100px;
     width: 200px;
     margin: 10px;
     align-self: center;
+    cursor: pointer;
 }
 .tile-img {
-    height: 150px;
+    height: 100px;
     object-fit: cover;
     width: 200px;
-    /* display: none; */
+    display: none;
+}
+.tile-img-active{
+    display: flex;
+    height: 100px;
+    object-fit: cover;
+    width: 200px;
+}
+.score-card-container {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    align-items: center;
+}
+.score-heading {
+    color: rgb(245, 112, 134);
+    text-decoration: underline;
+}
+
+@media screen and (min-width: 768px) {
+    .tiles-container{
+        padding: 20px;
+    }
+    .tiles-items-container {
+        /* grid-template-columns: 33% 33% 33%; */
+    }
+    .tile-card {
+        /* height: 150px;
+        width: 200px; */
+    }
 }
